# mcp-secure-remote

./: .gitignore  Dockerfile  LICENSE  LOCAL_MTLS_TESTING.md  PUBLISHING.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.github/workflows/: publish-npm.yml  publish-py.yml
scripts/: generate_dev_mtls_certs.sh  mock_mtls_mcp_server.py
src/: client.ts  proxy.ts
src/lib/: args.ts  log.ts  mtls.ts  proxy-core.ts  sanitize.ts  transport.ts
src/mcp_secure_remote/: args.py  client.py  log.py  mtls.py  proxy.py  sanitize.py  transport.py
test/integration/: mtls-server.test.ts
test/unit/: args.test.ts  log.test.ts  mtls.test.ts  proxy-core.test.ts  sanitize.test.ts
tests/: test_args.py  test_log.py  test_mtls.py  test_sanitize.py  test_transport.py
